--- a/GameBasicsSimulator/GameBasicsSimulator.csproj
+++ b/GameBasicsSimulator/GameBasicsSimulator.csproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App">
+      <PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
+      <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
@@ -21,8 +24,12 @@
     <Folder Include="wwwroot\css\" />
     <Folder Include="DB\" />
     <Folder Include="DTO\" />
+    <Folder Include="Methods\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\js\teams.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="EmptyCSharpFile.cs" />
   </ItemGroup>
 </Project>
