--- a/GameBasicsSimulator/GameBasicsSimulator.csproj
+++ b/GameBasicsSimulator/GameBasicsSimulator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -14,7 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
     <Folder Include="Service\" />
     <Folder Include="Controllers\" />
     <Folder Include="Views\" />
